# clipboard-relay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: doctrine.md
src/clipboard_relay/: __init__.py  __main__.py  daemon.py  history.py  relay.py
tests/: test_relay.py
